<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="login_title">Login\n</string>
    <string name="email_lbl">Email Address</string>
    <string name="password_lbl">Password</string>
    <string name="click_for_register_lbl">Don\'t have an account? Click here to register</string>
    <string name="login_btn">Login</string>
    <string name="register_title">Register</string>
    <string name="click_for_login_lbl">Already have an account? Click here to login</string>
    <string name="register_btn">Register</string>
    <string name="confirm_password_lbl">Confirm password</string>
    <string name="error_msg_invalid_email">Email is not valid</string>
    <string name="error_msg_blank_pass">Password cannot be blank</string>
    <string name="error_msg_pass_match">Passwords do not match</string>
    <string name="error_msg_pass_matches">Old and new passwords matches</string>
    <string name="error_msg_unexpected">Unexpected error occurred while processing the request. Please try again</string>
    <string name="error_msg_unexpected_network_problem">Unexpected network error occurred while processing the request. Please try again</string>
    <string name="please_wait">Please wait…</string>
    <string name="workout_panel_title">Current Workout</string>
    <string name="new_workout_btn">New Workout</string>
    <string name="workouts_panel_title">Workouts</string>
    <string name="save_btn">Save</string>
    <string name="confirm_btn">Confirm</string>
    <string name="yes_btn">Yes</string>
    <string name="settings_btn">Settings</string>
    <string name="do_not_ask_btn">Do not ask again</string>
    <string name="no_btn">No</string>
    <string name="assign_btn">Assign</string>
    <string name="create_new_btn">Create new</string>
    <string name="override_btn">Override</string>
    <string name="workout_name_lbl">Workout name</string>
    <string name="current_workout_lbl">Current Workout</string>
    <string name="current_workout_not_selected_lbl">Workout not selected</string>
    <string name="add_exercise_btn">Add Exercise</string>
    <string name="add_workout_btn">New Workout</string>
    <string name="add_exercise_lbl">Add Exercise</string>
    <string name="edit_exercise_lbl">Edit Exercise</string>
    <string name="exercise_name_lbl">Name</string>
    <string name="exercise_description_lbl">Description</string>
    <string name="error_msg_enter_exercise_name">Please enter exercise name</string>
    <string name="cancel_btn">Cancel</string>
    <string name="next_btn">Next</string>
    <string name="sets_lbl">Sets</string>
    <string name="weight_lbl">Weight</string>
    <string name="reps_lbl">Reps</string>
    <string name="error_msg_enter_ex_name">Please enter exercise name</string>
    <string name="error_msg_enter_workout_name">Please enter workout name</string>
    <string name="exercise_number_symbol">#</string>
    <string name="reps_number_lbl">Reps</string>
    <string name="weight_in_unit_lbl">Weight (%s)</string>
    <string name="add_set_btn">Add Set</string>
    <string name="delete_btn">Delete</string>
    <string name="completed_lbl">Completed</string>
    <string name="latest_workouts_lbl">Latest Workouts</string>
    <string name="workout_summary_lbl">%s/%s %s, %d/%d reps</string>
    <string name="add_workout_panel_title">Start Workout</string>
    <string name="edit_workout_panel_title">Edit Workout</string>
    <string name="edit_btn_lbl">Edit</string>
    <string name="exercises_lbl">Exercises:</string>
    <string name="select_muscle_group_lbl">Select muscle group</string>
    <string name="select_exercise_lbl">Select exercise</string>
    <string name="no_exercise_lbl">There are no exercises for %s.\nClick Add to create new exercise</string>
    <string name="no_exercise_to_edit_lbl">There are no editable exercises for %s.\nClick Add to create new exercise</string>
    <string name="exercise_lbl">Exercise</string>
    <string name="select_action_lbl">Select action</string>
    <string name="logout">Log out</string>
    <string name="actions_lbl">Actions</string>
    <string name="save_workout_as_template_lbl">Save workout as template</string>
    <string name="save_template_lbl">Save template</string>
    <string name="update_template_lbl">Update template</string>
    <string name="template_name_lbl">Template Name</string>
    <string name="error_msg_no_workout_selected">No workout selected</string>
    <string name="error_msg_enter_template_name">Please enter workout template name</string>
    <string name="templates_lbl">Templates</string>
    <string name="manage_templates_lbl">Manage templates</string>
    <string name="manage_exercises_lbl">Manage exercises</string>
    <string name="question_delete_template_title">Delete Template</string>
    <string name="question_delete_template_text">Are you sure you want to delete template \"%s\" ?</string>
    <string name="template_deleted">Template successfully deleted</string>
    <string name="action_start_workout_from_template">Start workout</string>
    <string name="action_delete_template">Delete template</string>
    <string name="action_add_template">Add template</string>
    <string name="action_update_template">Update template</string>
    <string name="error_select_action">Please select template action from the dropdown</string>
    <string name="error_select_exercise_action">Please select exercise action from the dropdown</string>
    <string name="back_btn">Back</string>
    <string name="add_btn">Add</string>
    <string name="new_exercise_btn">New exercise</string>
    <string name="describe_the_exercise_lbl">Describe the exercise</string>
    <string name="mg_exercise_description">Description: %s</string>
    <string name="add_exercise_to_current_workout_lbl">Add exercise to current workout</string>
    <string name="no_description_for_ex_lbl">No description added for this exercise…</string>
    <string name="exercise_completed_lbl">Exercise completed</string>
    <string name="no_workout_selected_lbl">You have not selected workout. Go to Main panel or click here to start new workout</string>
    <string name="target_lbl">Target: %s</string>
    <string name="action_update_exercise">Update exercise</string>
    <string name="action_delete_exercise">Delete exercise</string>
    <string name="action_exercise_default_values">Update default values</string>
    <string name="question_delete_exercise_title">Delete exercise</string>
    <string name="question_delete_exercise_text">Are you sure you want to delete exercise \"%s\" ?</string>
    <string name="question_override_exercise_text">Exercise \"%s\" already exists. Do you want to override it by changing the description?</string>
    <string name="question_override_exercise_title">Override Exercise</string>
    <string name="search_hint_lbl">Search</string>
    <string name="exercises_for_mg_lbl">Exercises for %s</string>
    <string name="complete_all_sets_lbl">Complete all sets</string>
    <string name="change_password_lbl">Change password</string>
    <string name="old_password_lbl">Old password</string>
    <string name="q_log_out_title">Log out</string>
    <string name="q_log_out_text">Are you sure you want to Log out ?</string>
    <string name="exercise_default_values_lbl">Exercise default values</string>
    <string name="default_values_explanation_lbl">Enter the default values which will be used when starting exercise. These values can be override with Manage Exercises function</string>
    <string name="weight_unit_lbl">Weight unit</string>
    <string name="weight_unit_lb_lbl">Lb</string>
    <string name="weight_unit_kg_lbl">Kg</string>
    <string name="no_workouts">You don\'t have any workouts in the selected time period</string>
    <string name="no_templates">You don\'t have any workout templates. To create your first template, select action \"Add template\" from the dropdown</string>
    <string name="completed_def_value_lbl">Completed</string>
    <string name="question_delete_workout_title">Delete Workout</string>
    <string name="question_delete_workout_text">Are you sure you want to delete workout \"%s\" ?</string>
    <string name="question_delete_exercise_from_workout_title">Delete exercise from workout</string>
    <string name="question_delete_exercise_from_workout_text">Are you sure you want to delete exercise \"%s\" from the current workout ?</string>
    <string name="welcome_lbl">Welcome</string>
    <string name="finish_workout_lbl">Finish workout</string>
    <string name="status_lbl">Status:</string>
    <string name="in_progress_lbl">In progress</string>
    <string name="finished_lbl">Finished</string>
    <string name="question_finish_workout_title">Finish workout</string>
    <string name="question_finish_workout_text">Are you sure you want to mark your workout as finished ? %s</string>
    <string name="exercises_not_finished_lbl">There are still uncompleted exercises</string>
    <string name="started_time_lbl">Started:</string>
    <string name="finished_date_time_lbl">Finished:</string>
    <string name="question_workout_already_finished_title">Workout already finished</string>
    <string name="question_workout_already_finished_text">If you want to add new exercise the workout status will be changed to not finished. Do you with to continue</string>
    <string name="question_workout_already_finished_when_edit_text">If you want to edit the exercise the workout status will be changed to not finished. Do you with to continue</string>
    <string name="workout_already_finished">Your workout is already marked as finished</string>
    <string name="select_date_lbl">Select date</string>
    <string name="previous_btn">Previous</string>
    <string name="error_msg_finish_time">Invalid workout finish time</string>
    <string name="workouts_filter_lbl">From %s</string>
    <string name="workout_filter_all">All</string>
    <string name="workout_filter_in_progress">In progress</string>
    <string name="workout_filter_completed">Completed</string>
    <string name="template_exercise_summary">%s x %d set(s)</string>
    <string name="edit_profile_lbl">Edit profile</string>
    <string name="full_name_lbl">Full name</string>
    <string name="permission_denied_message">Operation aborted. The requested permission has been denied</string>
    <string name="error_msg_failed_to_capture_image">Failed to capture image. Please try again</string>
    <string name="error_msg_failed_to_upload_image">Failed to upload image. Please try again</string>
    <string name="error_msg_no_media">No media selected</string>
    <string name="question_choose_image_title">Image selection</string>
    <string name="question_choose_image_text">Please select from where you want to upload image</string>
    <string name="camera_btn">Camera</string>
    <string name="gallery_btn">Gallery</string>
    <string name="question_go_to_settings_title">Permission required</string>
    <string name="question_go_to_settings_text">This feature requires access to camera. Please enable it in the app settings.</string>
    <string name="go_to_settings_btn">Go to Settings</string>
    <string name="remove_picture_btn">Remove picture</string>
    <string name="manage_teams_lbl">Manage teams</string>
    <string name="add_team_btn">Add team</string>
    <string name="team_name_lbl">Team name</string>
    <string name="describe_the_purpose_of_the_team_lbl">Describe the purpose of the team</string>
    <string name="add_private_notes_only_visible_to_you_lbl">Add private notes only visible to you</string>
    <string name="my_teams_lbl">My teams</string>
    <string name="invite_members_btn">Manage members</string>
    <string name="rest_time_lbl">Rest(s)</string>
    <string name="additional_notes_lbl">Additional notes</string>
    <string name="start_timer_lbl">Start timer</string>
    <string name="assign_workout_lbl">Assign workout</string>
</resources>