<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_finish_workout"
        android:title="@string/finish_workout_lbl"
        android:icon="@drawable/icon_finish_workout"/>

    <item
        android:id="@+id/nav_save_workout_template"
        android:title="@string/save_workout_as_template_lbl"
        android:icon="@drawable/icon_save_workout_as_template"/>

    <item
        android:id="@+id/nav_manage_templates"
        android:title="@string/manage_templates_lbl"
        android:icon="@drawable/icon_manage_templates"/>

    <item
        android:id="@+id/nav_manage_exercises"
        android:title="@string/manage_exercises_lbl"
        android:icon="@drawable/icon_manage_exercises"/>

    <item
        android:id="@+id/nav_manage_teams"
        android:title="@string/manage_teams_lbl"
        android:icon="@drawable/icon_manage_teams"/>

    <item
        android:id="@+id/start_timer"
        android:title="@string/start_timer_lbl"
        android:icon="@drawable/icon_start_timer"/>

    <item
        android:id="@+id/assign_workout"
        android:title="@string/assign_workout_lbl"
        android:icon="@drawable/icon_assign_workout"/>

</menu>
