<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/explanation_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/default_values_explanation_lbl"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exercise_sets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/sets_lbl"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@+id/explanation_lbl"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints=""
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/exercise_reps"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/set_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reps_lbl"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@+id/explanation_lbl"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints=""
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/exercise_weight"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exercise_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:hint="@string/weight_lbl"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@+id/exercise_sets"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rest_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/rest_time_lbl"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@+id/set_reps"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.fitnessapp.views.CustomSwitchView
        android:id="@+id/weigh_unit_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:leftText="@string/weight_unit_kg_lbl"
        app:rightText="@string/weight_unit_lb_lbl"
        app:layout_constraintTop_toBottomOf="@+id/exercise_weight"
        app:layout_constraintStart_toStartOf="@+id/exercise_weight"
        app:layout_constraintEnd_toEndOf="@+id/exercise_weight"/>

    <CheckBox
        android:id="@+id/complete_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_lbl"
        app:layout_constraintEnd_toEndOf="@+id/rest_txt"
        app:layout_constraintStart_toStartOf="@+id/rest_txt"
        app:layout_constraintTop_toTopOf="@+id/weigh_unit_selector"
        app:layout_constraintBottom_toBottomOf="@+id/weigh_unit_selector"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/save_btn"
        android:background="@drawable/background_top_border"
        app:layout_constraintTop_toBottomOf="@+id/weigh_unit_selector"
        style="@style/DialogButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>