<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/additional_notes_lbl"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="4000"
            android:gravity="top|start"
            android:scrollbars="vertical"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exercise_to_workout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/notes">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_sets"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/sets_lbl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/exercise_reps"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_reps"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:hint="@string/reps_lbl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/exercise_weight"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_weight"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/weight_lbl"
            app:layout_constraintTop_toBottomOf="@+id/exercise_sets"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rest_txt"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/rest_time_lbl"
            app:layout_constraintTop_toBottomOf="@+id/set_reps"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/complete_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/exercise_completed_lbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercise_weight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_btn"
        android:background="@drawable/background_top_border"
        app:layout_constraintTop_toBottomOf="@+id/exercise_to_workout_container"
        style="@style/DialogButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>