<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_lbl"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:importantForAccessibility="no"
        android:background="@drawable/icon_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/old_pass_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:drawableStart="@drawable/icon_custom_password"
        android:drawablePadding="8dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/old_password_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_close"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/new_pass_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:drawableStart="@drawable/icon_custom_password"
        android:drawablePadding="8dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_pass_txt"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/confirm_new_pass_txt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:drawableStart="@drawable/icon_custom_password"
        android:drawablePadding="8dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_txt"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_btn"
        android:background="@drawable/background_top_border"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_pass_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/DialogButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>